test/core: update ccan tap module
Syncs to last upstream change d1a951b82386391b82e48b32403891f85e253565
of the tap module.

--- a/core/ccan/tap/tap.3
+++ b/core/ccan/tap/tap.3
@@ -285,7 +285,7 @@ diag("Expected return code 0, got return code %d", rcode);
 .Xc
 .El
 .Pp
-For maximum compatability your test program should return a particular
+For maximum compatibility your test program should return a particular
 exit code.  This is calculated by
 .Fn exit_status
 so it is sufficient to always return from
@@ -303,7 +303,7 @@ directory in the source distribution contains numerous tests of
 functionality, written using
 .Nm .
 Examine them for examples of how to construct test suites.
-.Sh COMPATABILITY
+.Sh COMPATIBILITY
 .Nm
 strives to be compatible with the Perl Test::More and Test::Harness 
 modules.  The test suite verifies that
